# pdf-redact

./: CHANGELOG.md  LICENSE  README.md  Taskfile.dist.yml  dprint.json  mise.toml  pdf-redact  pdf-redact.usage.kdl  pdf_redact.py  pyproject.toml  release-please-config.json
.github/workflows/: release-assets.yml  release-please.yml
src/pdf_redact/: cli.py
src/pdf_redact/completions/: pdf-redact.bash  pdf-redact.fish  pdf-redact.zsh
taskfiles/: completions.yml
