[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pdf-redact"
version = "0.2.7"
description = "Safe PDF redaction CLI using PyMuPDF"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
  "pymupdf>=1.24.0",
]

[project.scripts]
pdf-redact = "pdf_redact.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_redact"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/pyproject.toml",
  "/requirements.txt",
]
